# zenoh-pico-zephyr-example

./: .gitmodules  CMakeLists.txt  README.md  prj.conf
